[gd_scene load_steps=2 format=3 uid="uid://c8v3husjbfeo0"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_fiwr3"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fiwr3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -198.0
offset_top = -194.0
offset_right = -44.0
offset_bottom = -41.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
theme_override_constants/separation = 30
alignment = 1

[node name="Button_Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Button_Quit")
text = "Start"

[node name="Button_Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Button_Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Button_Start")
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 86.0
offset_top = 81.0
offset_right = 414.0
offset_bottom = 245.0
theme_override_font_sizes/font_size = 100
text = "Natural Selection"

[connection signal="pressed" from="VBoxContainer/Button_Start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
